# experiments

./: README.md  _howto_maintainpackage.txt  pyproject.toml
src/: analyzeRuns.py  banditsxp.py  batchbanditxp.py  fullExperiment.py  genericxp.py  parallelRuns.py  plotResults.py  utils.py
src/statisticalrl_experiments/: analyzeRuns.py  fullExperiment.py  generictemplate.py  oneRun.py  parallelRuns.py  plotResults.py  utils.py
src/statisticalrl_experiments/BatchMABs/: massiveRuns.py  oneRun.py
src/statisticalrl_experiments/MABs/: massiveRuns.py  oneRun.py
src/statisticalrl_experiments/MDPs/: massiveRuns.py  oneRun.py
template/: generictemplate.py
