[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statisticalRL-experiments"
version = "1.20250716.1"
description = "Experimentation backbone for the Statistical Reinforcement Learning project"
authors = [{ name = "Odalric-Ambym Maillard", email = "odalric.maillard@inria.fr" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "gymnasium==1.1.1",
    "numpy==1.24.3",
    "joblib==1.3.2",
    "matplotlib==3.7.2",
    "statisticalRL-environments==1.20250716.6",
    "statisticalRL-learners=1.20250716.1"
]
#Also default packages: time,os,pickle,pathlib,multiprocessing,inspect

[project.urls]
Homepage = "https://github.com/StatisticalRL/experiments"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]