[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statisticalRL-experiments"
version = "2.2507"
description = "Experimentation backbone for the Statistical Reinforcement Learning project"
authors = [{ name = "Odalric-Ambym Maillard", email = "odalric.maillard@inria.fr" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "gymnasium==1.3.0",
    "numpy==2.5.0",
    "joblib==1.5.3",
   "matplotlib==3.11.0",
   # "statisticalRL-environments==2.2507",
   # "statisticalRL-learners==2.2507"
]
#Also default packages: time,os,pickle,pathlib,multiprocessing,inspect

[project.urls]
Homepage = "https://github.com/StatisticalRL/experiments"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]